<resources>
    <string name="app_name">QuizApp</string>

    <string name="question_text">Placeholder for first question...</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="hint_button">Hint?</string>
    
    <string name="question_1">Your zodiac sign provides insight into some specific traits, desires, and attitudes you have toward life.</string>
    <string name="question_2">There are 13 zodiac signs.</string>
    <string name="question_3">The are 3 elements that each sign belongs to: air, fire, and water.</string>
    <string name="question_4">Astrology is the study of the movements and relative positions of celestial bodies interpreted as having an influence on human affairs and the natural world.</string>
    <string name="question_5">Each sign begins on the 1st day of the month and ends on the last.</string>
    
    <string name="feedback_box">Placeholder for feedback</string>
    <string name="feedback_1">Your zodiac is great for a little self insight!</string>
    <string name="feedback_2">There are only 12 zodiac signs!</string>
    <string name="feedback_3">There are 4 elements that correspond with 3 signs each: Fire, Earth, Air, Water.</string>
    <string name="feedback_4">Each person\'s chart is compiled from the place and time of birth around the world, making you completely unique!</string>
    <string name="feedback_5">The signs start between the 19th and 23rd, and they run approx. a month.</string>
    
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>

    <string name="question_end">You finished the quiz!</string>
    <string name="feedback_end">Find out more and get a free birth chart at https://cafeastrology.com/</string>
    
    <string name="question_1_hint">Placeholder1</string>
    <string name="question_2_hint">Placeholder2</string>
    <string name="question_3_hint">Placeholder3</string>
    <string name="question_4_hint">Placeholder4</string>
    <string name="question_5_hint">Placeholder5</string>

    <string name="score">SCORE: %1$d</string>

</resources>
