<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBG">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:src="@drawable/zodiac_image"
        />
         <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitEnd"
            android:src="@drawable/zodiac_image"
         />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textSize="24dp"
        android:textColor="@color/colorBlack"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

       <Button
           android:id="@+id/true_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            />
        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_button"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feedback_textview"
        android:textSize="16dp"
        android:text="@string/feedback_1"
        android:textColor="@color/colorBlack"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textAlignment="center"
        />

</LinearLayout>
</FrameLayout>